fix: :wheelchair: improve color contrast for better readability
- Adjusted colors to meet WCAG guidelines for sufficient contrast levels.

--- a/style.css
+++ b/style.css
@@ -1,27 +1,24 @@
 /* Base */
 :root {
-	--clr-accent-400: #005FA6;
+	--clr-accent-400: hsl(206, 100%, 33%);
 
-	--clr-neutral-1000-75:rgba(0, 0, 0, 0.75);
-	--clr-neutral-1000-25:rgba(0, 0, 0, 0.25);
-	--clr-neutral-1000: #000000;
-	--clr-neutral-975: hsl(0, 0%, 20%);
-	--clr-neutral-950: #404040;
-	--clr-neutral-900: #545454;
-	--clr-neutral-850: hsl(0, 0%, 40%);
-	--clr-neutral-825: hsl(0, 0%, 60%);
-	--clr-neutral-800: hsl(0, 0%, 55%);
-	--clr-neutral-700: #cccccc;
-	--clr-neutral-300: #ebebeb;
-	--clr-neutral-200: hsl(0, 0%, 91%);
-	--c: hsl(0, 0%, 94%);
-	--clr-neutral-150: hsl(0, 0%, 95%);
-	--clr-neutral-100: hsl(0, 0%, 97%);
-	--clr-neutral-50: #ffffff;
+	--clr-neutral-950-25: hsla(0, 0%, 0%, 0.25);
+	--clr-neutral-950-75: hsla(0, 0%, 0%, 0.75);
+	--clr-neutral-950: hsl(0, 0%, 0%);
+	--clr-neutral-900: hsl(0, 0%, 10%);
+	--clr-neutral-800: hsl(0, 0%, 20%);
+	--clr-neutral-700: hsl(0, 0%, 30%);
+	--clr-neutral-600: hsl(0, 0%, 42%);
+	--clr-neutral-500: hsl(0, 0%, 55%);
+	--clr-neutral-400: hsl(0, 0%, 70%);
+	--clr-neutral-300: hsl(0, 0%, 80%);
+	--clr-neutral-200: hsl(0, 0%, 90%);
+	--clr-neutral-100: hsl(0, 0%, 95%);
+	--clr-neutral-50: hsl(0, 0%, 100%);
 
-	--clr-success-400: #2ecc71;
-	--clr-error-400: #e74c3c;
-	--clr-error-300: #ff1515;
+	--clr-success-400: hsl(145, 63%, 49%);
+	--clr-error-400: hsl(6, 78%, 57%);
+	--clr-error-300: hsl(0, 100%, 54%);
 }
 
 * {
@@ -37,16 +34,15 @@ body {
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 13px;
 	line-height: 1.6;
-	color: var(--clr-neutral-900);
-	background-color: var(--clr-neutral-50);
+	color: var(--clr-neutral-700);
 }
 
 a {
-	color: var(--clr-neutral-950);
+	color: inherit;
 }
 
 a:hover {
-	color: var(--clr-neutral-950);
+	color: var(--clr-accent-400);
 	transition-property: all;
 	transition-duration: 0.3s;
 	transition-timing-function: linear;
@@ -58,7 +54,7 @@ a.none:hover {
 
 .section-title {
 	text-align: center;
-	color: var(--clr-neutral-950);
+	color: var(--clr-neutral-800);
 }
 
 .heading-underline-decoration {
@@ -83,9 +79,9 @@ a.none:hover {
 
 /* Header */
 .top {
-	background-color: var(--clr-neutral-950);
+	background-color: var(--clr-neutral-800);
 	padding: 5px 0;
-	color: var(--clr-neutral-100);
+	color: var(--clr-neutral-50);
 }
 
 .top p {
@@ -97,12 +93,8 @@ a.none:hover {
 	padding: 0;
 }
 
-.top li i {
-	color: var(--clr-neutral-50);
-}
-
 .top li a {
-	color: var(--clr-neutral-50);
+	color: inherit;
 }
 
 .top li a:hover {
@@ -148,7 +140,10 @@ a.none:hover {
 	border: none;
 	border-bottom: 1px solid var(--clr-neutral-200);
 	background-color: var(--clr-neutral-50);
-	color: var(--clr-neutral-950);
+}
+
+.navbar-default .navbar-nav>li>a {
+	color: var(--clr-neutral-700);
 }
 
 .navbar-default .navbar-nav>li>a:hover {
@@ -173,11 +168,14 @@ a.none:hover {
 	margin: 10px 0 0 15px;
 }
 
-.navbar-default .navbar-toggle,
+.navbar-default .navbar-toggle {
+	border: none;
+	background: var(--clr-neutral-100);
+}
+
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-	border: none;
-	background: var(--clr-neutral-150);
+	background: var(--clr-neutral-200);
 }
 
 .navbar-default .navbar-toggle i {
@@ -222,7 +220,7 @@ a.none:hover {
 .main-navbar-nav li>.dropdown-menu>li>a {
 	padding: 10px;
 	position: relative;
-	color: var(--clr-neutral-950);
+	color: var(--clr-neutral-700);
 	line-height: 1.12857143;
 	font-size: 12px;
 }
@@ -255,7 +253,7 @@ a.none:hover {
 	}
 
 	.main-navbar-nav>li {
-		border-bottom: 1px solid var(--clr-neutral-150);
+		border-bottom: 1px solid var(--clr-neutral-100);
 	}
 
 	.main-navbar-nav>li:last-child {
@@ -323,15 +321,15 @@ a.none:hover {
 }
 
 .hero_content h1 {
-	text-shadow: 1px 1px 2px var(--clr-neutral-1000-75);
+	text-shadow: 1px 1px 2px var(--clr-neutral-950-75);
 	color: var(--clr-accent-400);
 	font-weight: 700;
 	font-size: 42px;
 }
 
 .hero_content h2 {
-	text-shadow: 1px 1px 2px var(--clr-neutral-1000-25);
-	color: var(--clr-neutral-1000);
+	text-shadow: 1px 1px 2px var(--clr-neutral-950-25);
+	color: var(--clr-neutral-950);
 	font-weight: 700;
 	font-size: 32px;
 	margin-top: 0;
@@ -360,7 +358,6 @@ a.none:hover {
 	padding-bottom: 10px;
 	padding-left: 0;
 	padding-right: 0;
-	color: var(--clr-neutral-900);
 	background-color: var(--clr-neutral-100);
 }
 
@@ -394,7 +391,7 @@ a.none:hover {
 		right: 0;
 		width: 1px;
 		height: 100%;
-		background-color: var(--clr-neutral-300);
+		background-color: var(--clr-neutral-200);
 	}
 
 	.boxes_area div[class*="col-"]:last-child:after {
@@ -435,7 +432,6 @@ a.none:hover {
 .services .media h4 {
 	font-size: 15px;
 	font-weight: 600;
-	color: var(--clr-neutral-950);
 }
 
 .services .media p {
@@ -451,7 +447,6 @@ a.none:hover {
 	font-size: 17px;
 	font-weight: 600;
 	padding-bottom: 20px;
-	color: var(--clr-neutral-950);
 	margin-bottom: 30px;
 }
 
@@ -460,7 +455,6 @@ a.none:hover {
 	padding: 0;
 	float: left;
 	width: 100%;
-	color: var(--clr-neutral-950);
 }
 
 .home_list ul li {
@@ -486,7 +480,7 @@ a.none:hover {
 }
 
 .home_list p {
-	color: var(--clr-neutral-800);
+	color: var(--clr-neutral-700);
 }
 
 .home_list a.btn {
@@ -580,7 +574,18 @@ a.none:hover {
 }
 
 /* Mail list */
+
+/* 
+  --_background-color:
+  This locally scoped CSS custom property is used to maintain consistency and ease of maintenance 
+  throughout the styles of the login form. It controls the background color of the `.login-group` 
+  and ensures that the border of the `.login-button` visually matches the appearance of the form. 
+  By using a locally scoped variable, any future changes to the background color can be made in 
+	a single location, propagating the update to the relevant elements seamlessly.
+*/
 .login-form-1 {
+	--_background-color: var(--clr-neutral-100);
+
 	max-width: 300px;
 	border-radius: 5px;
 	display: inline-block;
@@ -595,7 +600,7 @@ a.none:hover {
 	box-shadow: 0 0 0;
 	border-radius: 0;
 	background: transparent;
-	color: var(--clr-neutral-900);
+	color: var(--clr-neutral-800);
 	padding: 7px 0;
 	font-weight: bold;
 	height: auto;
@@ -606,7 +611,7 @@ a.none:hover {
 .login-form-1 .form-control::-moz-placeholder,
 .login-form-1 .form-control:-ms-input-placeholder,
 .login-form-1 .form-control::placeholder {
-	color: var(--clr-neutral-825);
+	color: var(--clr-neutral-500);
 }
 
 .login-form-1 .form-group {
@@ -620,8 +625,7 @@ a.none:hover {
 }
 
 .login-group {
-	background: var(--clr-neutral-150);
-	color: var(--clr-neutral-825);
+	background-color: var(--_background-color);
 	border-radius: 8px;
 	padding: 10px 20px;
 }
@@ -631,23 +635,23 @@ a.none:hover {
 	right: -25px;
 	top: 50%;
 	background: var(--clr-neutral-50);
-	color: var(--clr-neutral-825);
+	color: var(--clr-neutral-600);
 	padding: 11px 0;
 	width: 50px;
 	height: 50px;
 	margin-top: -25px;
-	border: 5px solid var(--clr-neutral-150);
+	border: 5px solid var(--_background-color);
 	border-radius: 50%;
 	transition: all ease-in-out 500ms;
 }
 
 .login-form-1 .login-button:hover {
-	color: var(--clr-neutral-900);
+	color: var(--clr-neutral-950);
 	transform: rotate(450deg);
 }
 
 .login-form-1 .login-button.clicked {
-	color: var(--clr-neutral-900);
+	color: var(--clr-neutral-950);
 }
 
 .login-form-1 .login-button.clicked:hover {
@@ -663,45 +667,22 @@ a.none:hover {
 }
 
 /* Footer */
-footer.site-footer {
+.site-footer {
 	background: var(--clr-neutral-200);
+	color: var(--clr-neutral-800);
 	padding: 20px 0 0;
 }
 
-footer.site-footer h4 {
+.site-footer h4 {
+color: var(--clr-neutral-950);
 	font-size: 17px;
-	font-weight: 500;
+	font-weight: 600;
 }
 
-footer.site-footer ul {
+.site-footer ul {
 	padding-left: 0;
 	margin-bottom: 20px;
 	list-style: none;
-}
-
-footer.site-footer a {
-	color: var(--clr-neutral-850);
-}
-
-footer .text {
-	color: var(--clr-neutral-850);
-}
-
-#copyright {
-	background: var(--clr-neutral-950);
-	color: var(--clr-neutral-700);
-	padding: 15px 0;
-	font-size: 12px;
-	margin-top: 20px;
-}
-
-#copyright p,
-#copyright ul {
-	margin: 0;
-}
-
-#copyright a {
-	color: var(--clr-neutral-50);
 }
 
 .site-footer li a:hover {
@@ -715,6 +696,23 @@ footer .text {
 
 .related-links li:nth-child(2n) {
 	margin-left: 2%;
+}
+
+#copyright {
+	background: var(--clr-neutral-800);
+	color: var(--clr-neutral-300);
+	padding: 15px 0;
+	font-size: 12px;
+	margin-top: 20px;
+}
+
+#copyright p,
+#copyright ul {
+	margin: 0;
+}
+
+#copyright a {
+	color: var(--clr-neutral-50);
 }
 
 @media (max-width:462px) {
