--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@
 	--clr-success-400: hsl(145, 63%, 49%);
 	--clr-error-400: hsl(6, 78%, 57%);
 	--clr-error-300: hsl(0, 100%, 54%);
+
+	--icon-size: 2.9rem;
 }
 
 * {
@@ -28,11 +30,11 @@
 html,
 body {
 	height: 100%;
+	font-size: 1rem;
 }
 
 body {
 	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-size: 13px;
 	line-height: 1.6;
 	color: var(--clr-neutral-700);
 }
@@ -55,6 +57,7 @@ a.none:hover {
 .section-title {
 	text-align: center;
 	color: var(--clr-neutral-800);
+	font-size: 2rem;
 }
 
 .heading-underline-decoration {
@@ -71,7 +74,7 @@ a.none:hover {
 	bottom: 0;
 }
 
-@media (width >= 992px) {
+@media (min-width: 992px) {
 	.clearfix {
 		display: none;
 	}
@@ -80,7 +83,7 @@ a.none:hover {
 /* Header */
 .top {
 	background-color: var(--clr-neutral-800);
-	padding: 5px 0;
+	padding: 0.375em 0;
 	color: var(--clr-neutral-50);
 }
 
@@ -140,10 +143,12 @@ a.none:hover {
 	border: none;
 	border-bottom: 1px solid var(--clr-neutral-200);
 	background-color: var(--clr-neutral-50);
+	font-size: 1.1rem;
 }
 
 .navbar-default .navbar-nav>li>a {
 	color: var(--clr-neutral-700);
+	font-weight: 600;
 }
 
 .navbar-default .navbar-nav>li>a:hover {
@@ -165,7 +170,7 @@ a.none:hover {
 }
 
 .navbar-default .navbar-toggle {
-	margin: 10px 0 0 15px;
+	margin: 0.625em 0 0 1em;
 }
 
 .navbar-default .navbar-toggle {
@@ -179,7 +184,7 @@ a.none:hover {
 }
 
 .navbar-default .navbar-toggle i {
-	font-size: 31px;
+	font-size: 2rem;
 }
 
 .navbar-default .navbar-collapse {
@@ -191,7 +196,7 @@ a.none:hover {
 
 .navbar-brand>img {
 	max-width: 100%;
-	padding: 5px;
+	padding: 1rem;
 }
 
 .main-navbar-nav {
@@ -202,8 +207,7 @@ a.none:hover {
 }
 
 .main-navbar-nav>li>a {
-	padding-top: 30px;
-	padding-bottom: 30px;
+	padding-block: 2em;
 	line-height: 1;
 }
 
@@ -218,25 +222,17 @@ a.none:hover {
 }
 
 .main-navbar-nav li>.dropdown-menu>li>a {
-	padding: 10px;
+	padding: 0.625em;
 	position: relative;
 	color: var(--clr-neutral-700);
 	line-height: 1.12857143;
-	font-size: 12px;
+	font-size: 1rem;
 }
 
 .main-navbar-nav li>.dropdown-menu>li>a:hover,
 .main-navbar-nav li>.dropdown-menu>li>a:focus {
 	background-color: transparent;
 	color: var(--clr-accent-400);
-}
-
-.main-navbar-nav li>.dropdown-menu>li>a i {
-	position: absolute;
-	right: 20px;
-	top: 50%;
-	margin-top: -8px;
-	font-size: 16px;
 }
 
 .navbar-brand {
@@ -261,10 +257,9 @@ a.none:hover {
 	}
 
 	.main-navbar-nav>li>a {
-		padding-top: 12px;
-		padding-bottom: 12px;
+		padding-block: 0.75em;
 	}
-	
+
 	.navbar-toggle {
 		display: block;
 	}
@@ -288,6 +283,10 @@ a.none:hover {
 	.navbar-default .navbar-collapse {
 		padding-left: inherit;
 		padding-right: inherit;
+	}
+
+	.navbar-default .navbar-nav .open .dropdown-menu>li>a {
+		color: inherit;
 	}
 }
 
@@ -316,46 +315,46 @@ a.none:hover {
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	min-height: 475px;
-	padding: 120px 0;
+	min-height: 30rem;
+	padding: 7.5rem 0;
 }
 
 .hero_content h1 {
 	text-shadow: 1px 1px 2px var(--clr-neutral-950-75);
 	color: var(--clr-accent-400);
 	font-weight: 700;
-	font-size: 42px;
+	font-size: 2.625rem;
 }
 
 .hero_content h2 {
 	text-shadow: 1px 1px 2px var(--clr-neutral-950-25);
 	color: var(--clr-neutral-950);
 	font-weight: 700;
-	font-size: 32px;
+	font-size: 2rem;
 	margin-top: 0;
 	width: 45%;
-	line-height: 38px;
+	line-height: 1em;
 }
 
 @media (max-width:462px) {
 	.hero_content {
-		padding: 80px 0;
+		padding-block: 5rem;
 	}
 
 	.hero_content h1 {
-		font-size: 32px;
+		font-size: 2rem;
 	}
 
 	.hero_content h2 {
 		width: 90%;
-		font-size: 21px;
+		font-size: 1.3rem;
 	}
 }
 
 /* Boxes */
 .boxes_area {
-	padding-top: 40px;
-	padding-bottom: 10px;
+	padding-top: 2.5rem;
+	padding-bottom: 0.625rem;
 	padding-left: 0;
 	padding-right: 0;
 	background-color: var(--clr-neutral-100);
@@ -367,9 +366,9 @@ a.none:hover {
 
 .box h3 {
 	margin-top: 0;
-	margin-bottom: 18px;
-	padding-bottom: 20px;
-	font-size: 16px;
+	margin-bottom: 1em;
+	padding-bottom: 1.2em;
+	font-size: 1.1rem;
 	font-weight: 500;
 }
 
@@ -379,7 +378,7 @@ a.none:hover {
 	top: 0;
 	margin: 0;
 	color: var(--clr-accent-400);
-	font-size: 45px;
+	font-size: var(--icon-size);
 }
 
 @media (min-width:769px) {
@@ -401,36 +400,35 @@ a.none:hover {
 
 @media (max-width:462px) {
 	.boxes_area .box p {
-		margin-bottom: 30px;
+		margin-bottom: 2em;
 	}
 
 	.services .media .media-left {
-		padding-right: 15px;
+		padding-right: 1em;
 	}
 }
 
 /* Home */
 .services {
-	padding-top: 50px;
-	padding-bottom: 50px;
+	padding-block: 3.125rem;
 }
 
 .services p.desc {
 	text-align: center;
-	margin-bottom: 20px;
+	margin-bottom: 1.25em;
 }
 
 .services .media {
-	margin-top: 30px;
+	margin-top: 2rem;
 }
 
 .services .media i {
-	font-size: 45px;
+	font-size: var(--icon-size);
 	color: var(--clr-accent-400);
 }
 
 .services .media h4 {
-	font-size: 15px;
+	font-size: 1.1rem;
 	font-weight: 600;
 }
 
@@ -440,14 +438,14 @@ a.none:hover {
 
 /* News */
 .home-area {
-	padding-bottom: 50px;
+	padding-bottom: 3.125rem;
 }
 
 .home_content h2 {
-	font-size: 17px;
+	font-size: 1.4rem;
 	font-weight: 600;
-	padding-bottom: 20px;
-	margin-bottom: 30px;
+	padding-bottom: 1em;
+	margin-bottom: 1.3em;
 }
 
 .home_list ul {
@@ -467,16 +465,15 @@ a.none:hover {
 }
 
 .thumbnail .caption {
-	padding: 9px;
+	padding: 0.625rem;
 	padding-left: 0;
 	padding-right: 0;
 }
 
 .home_list h3 {
-	font-size: 16px;
+	font-size: 1.1rem;
 	font-weight: 600;
-	margin-top: 10px;
-	margin-bottom: 10px;
+	margin-block: 0.6em;
 }
 
 .home_list p {
@@ -484,7 +481,6 @@ a.none:hover {
 }
 
 .home_list a.btn {
-	font-size: 13px;
 	padding: 0;
 	color: var(--clr-accent-400);
 }
@@ -576,7 +572,7 @@ a.none:hover {
 /* Mail list */
 
 /* 
-  --_background-color:
+  --_form-background-color:
   This locally scoped CSS custom property is used to maintain consistency and ease of maintenance 
   throughout the styles of the login form. It controls the background color of the `.login-group` 
   and ensures that the border of the `.login-button` visually matches the appearance of the form. 
@@ -584,10 +580,10 @@ a.none:hover {
 	a single location, propagating the update to the relevant elements seamlessly.
 */
 .login-form-1 {
-	--_background-color: var(--clr-neutral-100);
+	--_form-background-color: var(--clr-neutral-100);
 
-	max-width: 300px;
-	border-radius: 5px;
+	max-width: 18.75rem;
+	border-radius: 0.375rem;
 	display: inline-block;
 }
 
@@ -601,7 +597,7 @@ a.none:hover {
 	border-radius: 0;
 	background: transparent;
 	color: var(--clr-neutral-800);
-	padding: 7px 0;
+	padding: 0.375rem 0;
 	font-weight: bold;
 	height: auto;
 }
@@ -617,7 +613,7 @@ a.none:hover {
 .login-form-1 .form-group {
 	margin-bottom: 0;
 	border-bottom: 2px solid var(--clr-neutral-50);
-	padding-right: 20px;
+	padding-right: 1.25rem;
 }
 
 .login-form-1 .form-group:last-child {
@@ -625,22 +621,32 @@ a.none:hover {
 }
 
 .login-group {
-	background-color: var(--_background-color);
-	border-radius: 8px;
-	padding: 10px 20px;
+	background-color: var(--_form-background-color);
+	border-radius: 0.5rem;
+	padding: 0.625rem 1.25rem;
 }
 
+/* 
+  --_login-button-size:
+  This locally scoped CSS custom property is used to define the size of the`.login-button`. 
+  It ensures consistency in the button's dimensions (width and height) and is used to
+	calculate the button's position and alignment relative to its parent. By utilizing this
+	variable, any future adjustments to the button size can be applied easily in one centralized
+	location, thus maintaining consistent layout and appearance within the login form.
+*/
 .login-form-1 .login-button {
+	--_login-button-size: 3.125rem;
+
 	position: absolute;
-	right: -25px;
+	right: calc(-1 * var(--_login-button-size) / 2);
 	top: 50%;
 	background: var(--clr-neutral-50);
 	color: var(--clr-neutral-600);
 	padding: 11px 0;
-	width: 50px;
-	height: 50px;
-	margin-top: -25px;
-	border: 5px solid var(--_background-color);
+	width: var(--_login-button-size);
+	height: var(--_login-button-size);
+	margin-top: calc(-1 * var(--_login-button-size) / 2);
+	border: 5px solid var(--_form-background-color);
 	border-radius: 50%;
 	transition: all ease-in-out 500ms;
 }
@@ -670,18 +676,18 @@ a.none:hover {
 .site-footer {
 	background: var(--clr-neutral-200);
 	color: var(--clr-neutral-800);
-	padding: 20px 0 0;
+	padding: 1.25rem 0 0;
 }
 
 .site-footer h4 {
-color: var(--clr-neutral-950);
-	font-size: 17px;
+	color: var(--clr-neutral-950);
+	font-size: 1.2rem;
 	font-weight: 600;
 }
 
 .site-footer ul {
 	padding-left: 0;
-	margin-bottom: 20px;
+	margin-bottom: 1.25rem;
 	list-style: none;
 }
 
@@ -701,9 +707,9 @@ color: var(--clr-neutral-950);
 #copyright {
 	background: var(--clr-neutral-800);
 	color: var(--clr-neutral-300);
-	padding: 15px 0;
-	font-size: 12px;
-	margin-top: 20px;
+	padding: 1.14em 0;
+	font-size: 0.875rem;
+	margin-top: 1.42em;
 }
 
 #copyright p,
@@ -717,7 +723,7 @@ color: var(--clr-neutral-950);
 
 @media (max-width:462px) {
 	.fbox:last-child {
-		margin-top: 20px;
+		margin-top: 1.25rem;
 		float: left;
 		width: 100%;
 	}
