--- a/style.css
+++ b/style.css
@@ -54,6 +54,11 @@ a.none:hover {
 	text-decoration: none;
 }
 
+a:not(:has(i)) {
+	text-decoration: underline;
+	color: var(--clr-accent-400);
+}
+
 .section-title {
 	text-align: center;
 	color: var(--clr-neutral-800);
@@ -96,7 +101,7 @@ a.none:hover {
 }
 
 .social-media-links li:hover,
-.social-media-links li:hover i{
+.social-media-links li:hover i {
 	color: var(--clr-accent-400);
 	transition-property: all;
 	transition-duration: 0.3s;
@@ -179,6 +184,10 @@ a.none:hover {
 	border-bottom: 1px solid var(--clr-neutral-200);
 	background-color: var(--clr-neutral-50);
 	font-size: 1.1rem;
+}
+
+.navbar-default a {
+	text-decoration: none;
 }
 
 .navbar-default .navbar-nav>li>a {
@@ -494,9 +503,24 @@ a.none:hover {
 	list-style: none;
 }
 
-.home_list .thumbnail {
+.thumbnail {
 	border: none;
 	padding: 0;
+	display: flex;
+	flex-direction: column-reverse;
+	position: relative;
+}
+
+.thumbnail a::after {
+	content: '';
+	position: absolute;
+	inset: 0;
+}
+
+.thumbnail .caption p {
+	color: var(--clr-neutral-700);
+	position: relative;
+	z-index: 1;
 }
 
 .thumbnail .caption {
@@ -505,17 +529,13 @@ a.none:hover {
 	padding-right: 0;
 }
 
-.home_list h3 {
+.thumbnail h3 {
 	font-size: 1.1rem;
 	font-weight: 600;
 	margin-block: 0.6em;
 }
 
-.home_list p {
-	color: var(--clr-neutral-700);
-}
-
-.home_list a.btn {
+.thumbnail a.btn {
 	padding: 0;
 	color: var(--clr-accent-400);
 }
@@ -714,6 +734,22 @@ a.none:hover {
 	padding: 1.25rem 0 0;
 }
 
+.site-footer .row::before,
+.site-footer .row::after {
+	display: none;
+}
+
+.main-footer .row {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 2rem;
+	justify-content: space-between;
+}
+
+.main-footer .row>* {
+	flex-basis: calc(25% - 6rem);
+}
+
 .site-footer h4 {
 	color: var(--clr-neutral-950);
 	font-size: 1.2rem;
@@ -736,6 +772,11 @@ a.none:hover {
 	flex-wrap: wrap;
 }
 
+.site-footer .contact-information a {
+	color: var(--clr-accent-400);
+	text-decoration: underline;
+}
+
 #copyright {
 	background: var(--clr-neutral-800);
 	color: var(--clr-neutral-300);
@@ -753,20 +794,14 @@ a.none:hover {
 	color: var(--clr-neutral-50);
 }
 
-@media (max-width:462px) {
-	.fbox:last-child {
-		margin-top: 1.25rem;
-		float: left;
-		width: 100%;
+@media (max-width: 1200px) {
+	.main-footer .row>* {
+		flex-basis: calc(50% - 2rem);
 	}
 }
 
-@media (min-width:463px) and (max-width:768px) {
-	.fbox {
-		float: left;
-	}
-
-	.fbox:nth-child(3) {
-		float: right !important;
+@media (max-width: 722px) {
+	.main-footer .row>* {
+		flex-basis: 100%;
 	}
 }
