fix: :wheelchair: enhance form accessibility by connecting labels with inputs, adding instructions and descriptive text on buttons
- removed placeholders from login form
 -add labels to describe whats required from the user in the inputs
 -add autocomplete attributes
 - add contrast between the background of the form and the background of the inputs
 - add descriptive text to login button
 - add missing `for` attributes in modal form - add instructions instead of relying on the asterisk (*)
 - add the rquired attribute

--- a/style.css
+++ b/style.css
@@ -720,6 +720,10 @@ a:not(:has(i)) {
 	padding: 0.625rem 1.25rem;
 }
 
+.login-group .form-control {
+	background-color: hsl(from var(--clr-neutral-50) h s l / 0.7);
+}
+
 /* 
   --_login-button-size:
   This locally scoped CSS custom property is used to define the size of the`.login-button`. 
@@ -843,4 +847,8 @@ a:not(:has(i)) {
 	.main-footer .row>* {
 		flex-basis: 100%;
 	}
+}
+
+.modal .form-instructions {
+	font-style: italic;
 }
