--- a/style.css
+++ b/style.css
@@ -518,7 +518,7 @@ a:not(:has(i)) {
 	color: var(--clr-accent-400);
 }
 
-.services .media h4 {
+.services .media h3 {
 	font-size: 1.1rem;
 	font-weight: 600;
 }
@@ -605,6 +605,7 @@ a:not(:has(i)) {
 
 .carousel-control.left,
 .carousel-control.right {
+	border: none;
 	margin-left: 0;
 	background-image: none;
 }
@@ -801,7 +802,7 @@ a:not(:has(i)) {
 	flex-basis: calc(25% - 6rem);
 }
 
-.site-footer h4 {
+.site-footer h2 {
 	color: var(--clr-neutral-950);
 	font-size: 1.2rem;
 	font-weight: 600;
